shelter/pages/main/scss/components/_donation.scss
.donation {
  background-color: $color-bg-gray;
  &__wrapper {
    padding-top: 80px;
    padding-bottom: 99px;
    @media (max-width: ($desktop-width - 20px)) {
      padding-bottom: 100px;
    }
    @media (max-width: ($table-width - 10px)) {
      padding-top: 42px;
      padding-bottom: 42px;
    }
  }
  &__content {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
    @media (max-width: ($desktop-width - 190px)) {
      flex-direction: column;
      gap: 60px;
    }
  }
  &__img {
    @media (max-width: ($desktop-width - 190px)) {
      order: 2;
    }
    @media (max-width: ($table-width - 10px)) {
      width: clamp(260px, 67vw, 505px);
    }
  }
  &__inner {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 20px;
    max-width: 380px;
    @media (max-width: ($desktop-width - 190px)) {
      max-width: clamp(380px, 49vw, 800px);
      order: 1;
    }
    @media (max-width: ($table-width - 10px)) {
      align-items: center;
      gap: 23px;
    }
  }
  &__title {
    max-width: 300px;
    @media (max-width: ($table-width - 10px)) {
      text-align: center;
      max-width: clamp(214px, 40vw, 300px);
    }
  }
  &__name-bank {
    font-family: "Georgia-regular";
    @include font($size: 1.5rem, $height: 1.65rem);
    letter-spacing: 0.06em;
    color: $color-title;
    @media (max-width: ($table-width - 10px)) {
      letter-spacing: 0;
    }
  }
  &__number {
    max-width: 349px;
    background-color: $color-primary;
    border: none;
    border-radius: 9px;
    padding: 10px 14px 10px 60px;
    cursor: pointer;
    @extend %transition;
    position: relative;
    &::before {
      content: '';
      position: absolute;
      width: 30px;
      height: 23px;
      background-image: url(./../../../assets/icons/credit-card.svg);
      background-repeat: no-repeat;
      left: 15px;
      top: 9px;
      @media (max-width: ($table-width - 10px)) {
        left: 14px;
        top: 13px;
      }
    }
    @media (hover:hover) {
      &:hover {
        background-color: $color-primary-light;
      }
    }
    @media (max-width: ($table-width - 10px)) {
      padding: 18px 14px 11px 60px;
    }
    &-link {
      color: $color-title;
      text-decoration: none;
    }
  }
  &__legal-info {
    @include font($size: 1.2rem, $height: 1.8rem, $style: italic);
    color: $color-legal;  
    @media (max-width: ($table-width - 10px)) {
      padding: 0 10px;
      text-align: justify;
    }
  }
}

